--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,11 @@
     "@sequelize": "src/sequelize",
     "@services": "src/services",
     "@models": "src/sequelize/models",
-    "@passport": "src/middlewares/passport"
+    "@passport": "src/middlewares/passport",
+    "@oauth": "src/oauth"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
